--- a/roles/centos_server/tasks/main.yml
+++ b/roles/centos_server/tasks/main.yml
@@ -1,19 +1,25 @@
 ---
 
-- name: Install httpd and php on centos
+#- name: Install httpd and php on centos
+#  dnf:
+#    name:
+#      - httpd
+#      - php
+#    state: present
+
+#- name: start and enable httpd
+#  service:
+#    name: httpd
+#    state: started
+#    enabled: yes
+
+#- name: Install monitoring prometheus
+#  yum:
+#    name: prometheus
+#    state: present
+
+
+- name: Install kibana
   dnf:
-    name:
-      - httpd
-      - php
-    state: present
-
-- name: start and enable httpd
-  service:
-    name: httpd
-    state: started
-    enabled: yes 
-
-- name: Install monitoring prometheus
-  yum:
-    name: prometheus
+    name: kibana
     state: present
